--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 1. adjust direction for SSC
 2. ginkgo has different direction of rbcL/psaC
 3. which is correct conformation/structure
+4. output regions to different files
+5. BLAST strand
 
