--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
-1. adjust direction for SSC
+#1. adjust direction for SSC
 2. ginkgo has different direction of rbcL/psaC
-3. which is correct conformation/structure
-4. output regions to different files
-5. BLAST strand
-6. matplotlib
+#3. which is correct conformation/structure
+#4. output regions to different files
+#5. BLAST strand
+#6. matplotlib
 7. integrate validate into novowrap
-8. novowrap do not use BarcodeFinder
+#8. novowrap do not use BarcodeFinder
+9. mark BLAST result, if plus > 90% of region, plus, if plus zero but minus,
+reverse
