--- a/TODO
+++ b/TODO
@@ -12,3 +12,4 @@
 #12. arg.ref_gb to arg.ref (fasta also ok)
 #13. fewer files
 14. merge contigs from various seed
+15. novowrap pass assembly info to validate
