--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 #4. output regions to different files
 #5. BLAST strand
 #6. matplotlib
-7. integrate validate into novowrap
+#7. integrate validate into novowrap
 #8. novowrap do not use BarcodeFinder
 #9. mark BLAST result, if plus > 90% of region, plus, if plus zero but minus, reverse
 #10. rm .blast
@@ -15,4 +15,5 @@
 15. novowrap pass assembly info to validate
 #16. split reads
 #17. auto detect reads len
-17. auto detect mem
+#17. auto detect mem
+18. add tabacum's cp as default
