--- a/TODO
+++ b/TODO
@@ -18,4 +18,6 @@
 #17. auto detect mem
 # 18. add tabacum's cp as default
 19. if cannot find close related species, use whole cp as novoplasy's author recommended
-20. novoplasty didn't use GPL, download it when run
+#20. novoplasty didn't use GPL, download it when run
+21. better name, novowrap only for cp
+22. what special for cp
