--- a/TODO
+++ b/TODO
@@ -23,3 +23,5 @@
 22. what special for cp
 23. hide warning from matplotlib
 24. simple filename
+25. table for batch
+26. auto correct table's taxon
