--- a/TODO
+++ b/TODO
@@ -21,7 +21,7 @@
 #20. novoplasty didn't use GPL, download it when run
 21. better name, novowrap only for cp
 22. what special for cp
-23. hide warning from matplotlib
+#23. hide warning from matplotlib
 24. simple filename
 25. table for batch
 26. auto correct table's taxon
