reinit arg.out, no change if arg.f or arg.m, change if arg.list

--- a/TODO
+++ b/TODO
@@ -30,3 +30,4 @@
 29. LSC has rbcL, matK, psaB, remove matK
 30. tmp/result/seed folders
 31. split main to make arg.list work
+32. reads length/number
