--- a/TODO
+++ b/TODO
@@ -28,10 +28,11 @@
 #27. merge csv
 28. choose new seed
 #29. LSC has rbcL, matK, psaB, remove matK
-30. tmp/result/seed folders
-31. split main to make arg.list work
-32. reads length/number
+#30. tmp/result/seed folders
+#31. split main to make arg.list work
+#32. reads length/number
 33. divide 1?
-34. out
-35. read_table()
+#34. out
+#35. read_table()
 36. novoplasty print line number instead of reads number
+37. keep un-RC fasta
