--- a/TODO
+++ b/TODO
@@ -22,7 +22,7 @@
 21. better name, novowrap only for cp
 22. what special for cp
 #23. hide warning from matplotlib
-24. simple filename
+#24. simple filename
 #25. table for batch
 26. auto correct table's taxon
 #27. merge csv
