--- a/TODO
+++ b/TODO
@@ -35,9 +35,9 @@
 #34. out
 #35. read_table()
 36. novoplasty print line number instead of reads number
-37. keep un-RC fasta
+#37. keep un-RC fasta
 #38. no new_gb
 #39. duplicate csv
-40. simple csv
-41. move b03.1
-42. .rotate -> .fasta
+#40. simple csv
+#41. move b03.1
+#42. .rotate -> .fasta
