--- a/TODO
+++ b/TODO
@@ -43,4 +43,5 @@
 #42. .rotate -> .fasta
 43. figure add length
 44. BLAST a to b different with b to a
-45. toplevel cannot be destoryed
+#45. toplevel cannot be destoryed
+46. contigs and _RC_ contigs in same link
