--- a/TODO
+++ b/TODO
@@ -45,3 +45,4 @@
 44. BLAST a to b different with b to a
 #45. toplevel cannot be destoryed
 46. contigs and _RC_ contigs in same link
+47. clean blastlog
