--- a/TODO
+++ b/TODO
@@ -46,3 +46,4 @@
 #45. toplevel cannot be destoryed
 46. contigs and _RC_ contigs in same link
 47. clean blastlog
+48. validate only validate first record in input
