--- a/TODO
+++ b/TODO
@@ -47,3 +47,4 @@
 46. contigs and _RC_ contigs in same link
 #47. clean blastlog
 48. validate only validate first record in input
+49. test get_perl
