change scale in different resolution

--- a/TODO
+++ b/TODO
@@ -41,7 +41,7 @@
 #40. simple csv
 #41. move b03.1
 #42. .rotate -> .fasta
-43. figure add length
+#43. figure add length
 44. BLAST a to b different with b to a
 #45. toplevel cannot be destoryed
 46. contigs and _RC_ contigs in same link
