--- a/TODO
+++ b/TODO
@@ -64,3 +64,4 @@
 #63. after close, reopen main ui
 #64. pyinstaller have to remove mpl_toolkits.pyc
 #65. currently pyinstaller cannot pack to exe if use "-F"
+66. init module for all get_*
