--- a/TODO
+++ b/TODO
@@ -71,3 +71,5 @@
 70. auto split, or 1000w reads?
 #71. daemon thread
 72. use raw string in table
+73. biopython 1.78 removed Bio.Alphabet
+74. remove IUPAC
