--- a/TODO
+++ b/TODO
@@ -73,5 +73,5 @@
 72. use raw string in table
 73. 151660*
 74. repeat info in gb
-75 biopython 1.78 removed Bio.Alphabet
+#75 biopython 1.78 removed Bio.Alphabet
 76. remove IUPAC
